@@ -1,7 +1,7 @@
 DIST calculate-client-2.1.11.tar.bz2 76735 RMD160 a31fff0135103bd32aee1c903eeae2b059e31c0b SHA1 1a1f05ab8bcc0aeb04bbf10371bec9aaad09cf18 SHA256 3f3410b697e9ebf4965bf0886b3ad8c40815c2ee464fdaaa90e220fb5b51f723
-DIST calculate-client-2.1.15.tar.bz2 90299 RMD160 967f7d4142b235c587571937a55c4be9c84ffb49 SHA1 aaf413c8915e29023b8cec52a16477e02bf55428 SHA256 58e779dd9a139fb3fc4615ee29025dfc2aea31a565d42131288a06c7b8d18d78
+DIST calculate-client-2.1.16.tar.bz2 91245 RMD160 f755a8b52fc2ec9e738e0b2dbd0d9441b8abb776 SHA1 dfe815aa6b24326e63ae4c9602888dd5c48fb54b SHA256 37ead651fcf58d731b124a2e5a9f53e53e52f4d633147c8f0efb1cdbe6eafff8
 EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436b04310f744 SHA1 63b0908f95087157bd20f340b9c85aea13f46adf SHA256 a1c36d830d38872afaa8c2d691af7a9453008d2448a4f8dda5000e2880b2f57c
-EBUILD calculate-client-2.1.15.ebuild 1687 RMD160 7c003b5926a259da6c7d0e4798abe07ce0be8438 SHA1 1a1bfb451c0ec3fd9b50f3c05e9019eeef3a3999 SHA256 1771174bbfe05c8895b0f1ff851ae577d956f2273bdafe575797c21064df1024
+EBUILD calculate-client-2.1.16.ebuild 1687 RMD160 b3fbfb7821d226f4887dda4fcaafb5aa86bd8ee4 SHA1 0b93a2b9e4196cf0805687ec5a22a4a8ee8cc3df SHA256 a7ac5fc92e5e7db86bcb398389354a828982bbcb33c49d19d563900ab1c08efd
 EBUILD calculate-client-9999.ebuild 1644 RMD160 60e44af47cf785ac2990e61533c38cf0e859428a SHA1 58cd13f684b0f98b26538e27fbf467539663436d SHA256 01308bba3a9534a28d73bedd161d54ed4ec25977f4aa559387e9a6dd39e3dcbb
-MISC ChangeLog 2168 RMD160 c7f4e83027b4a7a61c203825f466bb5dbb9e892f SHA1 40c104623d0f568aa384365dc46ab543c7af0c04 SHA256 957e631a11eba3cc16406ada83a7e60e346ed4734cb9c659979077d5a8267a3e
+MISC ChangeLog 2370 RMD160 c54d4748e6bda811efcfd2a80b64de6916d2cd83 SHA1 e8ad089a98762c06bbd9e9607b6cb5ed588d5501 SHA256 807a9cfede833f9eebc8c92e6878f146123108cda267212cba4bc46c3a39aa0e
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
