@@ -1,7 +1,9 @@
 DIST calculate-lib-2.1.7.tar.bz2 59734 RMD160 61aad4dcb79a3c7b4dabbb38368ab3625c9fd495 SHA1 68f43a24ad5caa8018c984c610934046c6c1c54b SHA256 bd41dd5e8a850837df412ad4a6f700f65df7adfce17df02b9d90a56d7e19fc7f
 DIST calculate-lib-2.1.8.tar.bz2 61178 RMD160 4a4ed063a9b4d3b82723f5f6eb046c97ad9fcda1 SHA1 93eb20057afff6e98c409388e1259a3ad078bb7a SHA256 ef8e315001663da7a45e69b82dc7c158fb0e10bd567efa95bf8a654ed441144a
+DIST calculate-lib-2.1.9.tar.bz2 61280 RMD160 ceb6bee74a9a9c47eee1c562a9700241e601f931 SHA1 0d49ac5f3607d9a43d9b8a0bb2afb41a715ea94f SHA256 a40c461ee6e093c2862f9431d2d60049d44c8a4ff12122bff6956c0fa3a46693
 EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb96690 SHA1 f73944ea64b1d3a1f9d1027be32efb2e22a4a796 SHA256 2406070a830ac39f4701ece61d7b2d7d5a220e057db19078b23ce50b3649dbbf
 EBUILD calculate-lib-2.1.8.ebuild 578 RMD160 a76c3b9ab13bf4f69d002904d41b01889958adf9 SHA1 91cfabb263365be7800296969a48abfc831f0d8f SHA256 c796f7dfbc321c6580706b63780321efaaa50d9e7fc363bdfef6890365166d03
+EBUILD calculate-lib-2.1.9.ebuild 578 RMD160 44eda1d0ae1b1057c200380fc81786f31fd3ce2b SHA1 c7dee498dc17cf71dcef862c17be6b282f4bb63e SHA256 08244fbc8ba1fff546a96a7869708647a39e781c468d71b456821a22c59c4c56
 EBUILD calculate-lib-9999.ebuild 480 RMD160 042b18ce064ab98481c27af2259573cd54c4efa0 SHA1 c3cb4cc7dfe7ee34a4edb154986bd0d11968bcfd SHA256 7f7edb76721770042bc6550a5743bf2914b6b24a0be0b917d87f11863d93b921
-MISC ChangeLog 1009 RMD160 a03e0ca6710c881434f560d6ab8658b0d0158cdc SHA1 9f87deed6511a2ab65328d1d836068b7615d4553 SHA256 fbdf0c51208db7bbe9bc8c27fe206d34d28c47e01147426db6f1fb20f97bfc32
+MISC ChangeLog 1153 RMD160 2f9c95b30fd29cf01155c198943912a9e776d9d2 SHA1 3ae5e1534d20537d54c08648c09a43419c69fdf5 SHA256 d23de7e36590ea8d908a18bbe3a1cc99603119ec6fba13f424b210de722b76ef
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
