@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.1.16 (16 Apr 2010)
+
+  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-client-2.1.15.ebuild, +calculate-client-2.1.16.ebuild:
+  Bump version. Remove previous.
+
   10 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   -calculate-client-2.1.4-r1.ebuild, -calculate-client-2.1.6.ebuild,
   -calculate-client-2.1.7.ebuild, -calculate-client-2.1.7-r1.ebuild,
